--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "dependencies": {
     "next": "14.2.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "ai": "3.3.0"
+    "react-dom": "18.3.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.5",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "@types/node": "^20.12.12"
   }
 }
