--- a/package.json
+++ b/package.json
@@ -1,27 +1,40 @@
 {
-  "name": "sovereign-omega",
-  "version": "0.569.0",
+  "name": "sovereign-omega-quantum",
+  "version": "∞.569.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test-quantum": "jest --testPathPattern=quantum",
+    "deploy": "./deploy_omega.sh"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.24.3",
     "@google/generative-ai": "^0.11.0",
     "@huggingface/inference": "^2.7.0",
+    "@noble/post-quantum": "^0.1.0",
+    "@noble/ciphers": "^0.4.1",
+    "@noble/hashes": "^1.3.3",
+    "@supabase/supabase-js": "^2.43.4",
+    "@vercel/kv": "^1.0.1",
+    "@vercel/analytics": "^1.2.2",
+    "ai": "^3.1.22",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "ethers": "^6.12.1",
     "framer-motion": "^11.2.10",
+    "lz4js": "^0.2.0",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "openai": "^4.52.0",
+    "rate-limiter-flexible": "^3.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.3.0",
+    "tiktoken": "^1.0.15",
     "uuid": "^9.0.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
